# api_axum_base

./: Cargo.toml  README.md  application.toml
itoo_config/: Cargo.toml
itoo_config/src/: config.rs  lib.rs
itoo_web/: Cargo.toml
itoo_web/src/: lib.rs  main.rs
itoo_web/src/initialize/: mod.rs
src/: main.rs
src/common/: error.rs  mod.rs  response.rs  route.rs  tracing.rs
src/middlewares/: authorized.rs  mod.rs  request.rs  response.rs  sign.rs
