[package]
edition = "2021"
name = "axum基础框架"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tokio = {version = "1.21", features = ["full"]}
tower = "0.4"
# 日志
tracing = "0.1"
tracing-subscriber = "0.3.6"

serde = {version = "1", features = ["derive"]}
thiserror = "1"
